syntax = "proto3";

service User{
    rpc Login(LoginRequest) returns(LoginResponse) {};
}

message LoginRequest {
    string user_id=1;
    string password=2;
}

message LoginResponse {
    string token=1;
}